libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/SUBPDA.NSN
DEFINE DATA
PARAMETER USING MYPDA
END-DEFINE

END
